--- a/public/index.html
+++ b/public/index.html
@@ -2,47 +2,45 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/pwmdlogo.ico" />
     <link rel="stylesheet" href="https://use.typekit.net/ebt4zpp.css">
 
     <script src="https://cdn.lordicon.com/lordicon.js" type="module"></script>
     <script src="https://unpkg.com/@dotlottie/player-component@latest/dist/dotlottie-player.mjs" type="module"></script>
+    <script type="text/javascript">
+      function googleTranslateElementInit() {
+        new google.translate.TranslateElement(
+          { pageLanguage: "en" },
+          "google_translate_element"
+        );
+      }
+    </script>
+    <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
+    <meta charset="UTF-8">
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
-  </head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="People Who Make A Difference is a nonprofit organization dedicated to assisting the uninsured population by providing financial support for affordable healthcare.">
+  <meta name="author" content="People Who Make A Difference">
+  <meta name="keywords" content="nonprofit, uninsured population, affordable healthcare, financial support, People Who Make A Difference, doctors for uninsured, health workshops, fundraisers">
+  <meta name="robots" content="index, follow">
+  
+  <!-- Open Graph Meta Tags -->
+  <meta property="og:title" content="People Who Make A Difference">
+  <meta property="og:description" content="People Who Make A Difference is a nonprofit organization dedicated to assisting the uninsured population by providing financial support for affordable healthcare.">
+  <meta property="og:image" content="https://www.yourwebsite.com/images/social-image.jpg">
+  <meta property="og:url" content="https://www.peoplewhomakeadifference.org">
+  <meta property="og:type" content="website">
+  <meta property="og:site_name" content="People Who Make A Difference">
+  
+  <!-- Canonical Link -->
+  <link rel="canonical" href="https://www.peoplewhomakeadifference.org">
+  
+  <title>People Who Make A Difference</title>
+    </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
   </body>
 </html>
