--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
   <!-- Open Graph Meta Tags -->
   <meta property="og:title" content="People Who Make A Difference">
   <meta property="og:description" content="People Who Make A Difference is a nonprofit organization dedicated to assisting the uninsured population by providing financial support for affordable healthcare.">
-  <meta property="og:image" content="https://www.yourwebsite.com/images/social-image.jpg">
+  <meta property="og:image" content="https://www.peoplewhomakeadifference.org/static/media/pwmd.499d869ca440622b5a1c.webp">
   <meta property="og:url" content="https://www.peoplewhomakeadifference.org">
   <meta property="og:type" content="website">
   <meta property="og:site_name" content="People Who Make A Difference">
