--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/pwmdlogo.ico" />
     <link rel="stylesheet" href="https://use.typekit.net/ebt4zpp.css">
-
+    <script src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit" crossorigin="anonymous"></script>
     <script src="https://cdn.lordicon.com/lordicon.js" type="module"></script>
     <script src="https://unpkg.com/@dotlottie/player-component@latest/dist/dotlottie-player.mjs" type="module"></script>
     <script type="text/javascript">
