--- a/public/index.html
+++ b/public/index.html
@@ -4,18 +4,20 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/pwmdlogo.ico" />
     <link rel="stylesheet" href="https://use.typekit.net/ebt4zpp.css">
-    <script src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit" crossorigin="anonymous"></script>
+
     <script src="https://cdn.lordicon.com/lordicon.js" type="module"></script>
     <script src="https://unpkg.com/@dotlottie/player-component@latest/dist/dotlottie-player.mjs" type="module"></script>
+    
     <script type="text/javascript">
       function googleTranslateElementInit() {
-        new google.translate.TranslateElement(
-          { pageLanguage: "en" },
-          "google_translate_element"
-        );
+          new google.translate.TranslateElement(
+              { pageLanguage: "en" },
+              "google_translate_element"
+          );
       }
-    </script>
-    <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+  </script>
+  <script src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
